# spmatch

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE.txt  README.md  cones_im2_pixel_227_133_cost_im6.txt
include/: debug.hpp  geometry.hpp  grid.hpp  image.hpp  log.hpp  numbers.hpp  params.hpp  stereo.hpp  utils.hpp
saved/: conesL.csv  conesR.csv  neighbourFunctionTest.fig  planeNormals.fig  planeNormals.mat  uniformPlaneFunction.mat
src/: debug.cpp  geometry.cpp  image.cpp  medianTest.cpp  numbers.cpp  spmatch.cpp  stereo.cpp  utils.cpp
